--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </button>
         <ul class="list">
           <li class="mobile-item">
-            <a href="./index.html" class="mobile-link link">Studio</a>
+            <a href="./index.html" class="mobile-link studio link link">Studio</a>
           </li>
           <li class="mobile-item">
             <a href="./portfolio.html" class="mobile-link link">Portfolio</a>
