--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
           </address>
         </div>
       </div>
-      <div class="mobile-menu is-hidden " data-menu>
-        <div class="container mobile-menu-container">
+      <div class="mobile-menu container is-hidden " data-menu>
         <button type="button" class="modal-close-btn" data-menu-close >
           <svg width="8" height="8" class="modal-close ">
             <use href="./images/symbol-defs.svg#icon-close-black"></use>
           </svg>
         </button>
+        <div>
         <ul class="list">
           <li class="mobile-item">
             <a href="./index.html" class="mobile-link studio link link">Studio</a>
@@ -80,6 +80,8 @@
             <a href="" class=" mobile-link link">Contacts</a>
           </li>
         </ul>
+        </div>
+        <div class="mobile-top">
         <ul class="mobile-address list">
           <li class="address-item">
             <a href="tel:+110001111111" class="mobile-fone-link link"
@@ -128,8 +130,7 @@
                     </a>
                   </li>
         </ul>
-
-          </div>
+        </div>
 
       </div>
       </div>
