--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           </address>
         </div>
       </div>
+      
       <div class="mobile-menu container is-hidden " data-menu>
         <button type="button" class="modal-close-btn" data-menu-close >
           <svg width="8" height="8" class="modal-close ">
@@ -131,9 +132,8 @@
                   </li>
         </ul>
         </div>
+      </div> 
 
-      </div>
-      </div>
     </header>
     <main>
       <section class="main-section">
@@ -471,7 +471,7 @@
       </section> 
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container-footer">
         <div class="footer-center">
           <div class="logo-soc-position">
           <div class="mobile-logo ">
