--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
       </section> 
     </main>
     <footer class="footer">
-      <div class="container-footer">
+      <div class="container">
         <div class="footer-center">
           <div class="logo-soc-position">
           <div class="mobile-logo ">
